# emwave-c

./: .gitignore  BUILDING_WINDOWS.md  BUILD_SUCCESS.md  CMakeLists.txt  COMPILATION_STATUS.md  DEBUG.md  IMGUI_FEATURE_PARITY.md  IMGUI_IMPLEMENTATION_PROGRESS.md  MODULAR_ARCHITECTURE_SUMMARY.md  MODULAR_BUILD_STATUS.md  PHASE_2.5_INTEGRATION_PLAN.md  PHASE_2.75D_ADDITIONAL_POLISH.md  PHASE_2.75D_IMPLEMENTATION_GUIDE.md  PHASE_2.75D_QUICK_REFERENCE.md  PHASE_2.75D_SMOKE_TEST.md  PHASE_2.75D_VALIDATION_COMPLETE.md  PHASE_2_VALIDATION_REPORT.md  PRINT_COMPOSER_DESIGN.md  PRINT_COMPOSER_PROGRESS.md  PROJECT_COMPREHENSIVE_REPORT.md  QUICK_START_WINDOWS.md  README.md  REVIEW_STATUS.md  STRATEGIC_VISION_SUMMARY.md  TOOLBAR_DESIGN.md  UI_MODERNIZATION_COMPLETE_SUMMARY.md  UI_MODERNIZATION_IMPLEMENTATION_GUIDE.md  UI_OVERHAUL_GUIDE.md  build-imgui.ps1  build-msvc.ps1  check_braces.py  check_ifs.py  check_parens.py  codex-report-emwavec.md  measurements.csv  my_changes.patch  ports_sparams.txt  probe.txt  probe_fft.csv  tmp_snip.txt  (+2 more)
.claude/: settings.local.json
.github/workflows/: ci.yml
assets/icons/: README.txt
build-imgui/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  EmWaveC.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  emwave.vcxproj  emwave.vcxproj.filters  emwave_cli.vcxproj  emwave_cli.vcxproj.filters  emwave_core.vcxproj  emwave_core.vcxproj.filters  emwave_imgui.vcxproj  emwave_imgui.vcxproj.filters  emwave_solver.vcxproj  emwave_solver.vcxproj.filters  render_layout_test.vcxproj  render_layout_test.vcxproj.filters  sweep_s21.csv
build-imgui/Release/: imgui.ini
build-imgui/Testing/Temporary/: CTestCostData.txt
build-imgui/emwave.dir/Release/: emwave.exe.recipe
build-imgui/emwave.dir/Release/emwave.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  emwave.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-imgui/emwave_cli.dir/Release/: emwave_cli.exe.recipe
build-imgui/emwave_cli.dir/Release/emwave_cli.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-imgui/emwave_core.dir/Release/emwave_core.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
build-imgui/emwave_imgui.dir/Release/: emwave_imgui.exe.recipe
build-imgui/emwave_imgui.dir/Release/emwave_imgui.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  (+6 more)
build-imgui/emwave_solver.dir/Release/: emwave_solver.lib.recipe
build-imgui/render_layout_test.dir/Release/: render_layout_test.exe.recipe
build-imgui/tests/unit/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  analysis_tests.vcxproj  analysis_tests.vcxproj.filters  check_stub.vcxproj  check_stub.vcxproj.filters  config_loader_tests.vcxproj  config_loader_tests.vcxproj.filters  config_runtime_tests.vcxproj  config_runtime_tests.vcxproj.filters  fdtd_core_tests.vcxproj  fdtd_core_tests.vcxproj.filters  material_library_tests.vcxproj  material_library_tests.vcxproj.filters
cmake/: FindCheck.cmake
configs/: SCHEMA.md  cpw_filter.json  invalid_config.json  waveguide.json
docs/: PHASE_2.75D_ADDITIONAL_POLISH.md  PHASE_2.75D_IMPLEMENTATION_GUIDE.md  PHASE_2.75D_QUICK_REFERENCE.md  PRINT_COMPOSER_DESIGN.md  REFACTORING_PLAN.md  SCENES.md  UI_MODERNIZATION_BRAINSTORM.md  UI_MODERNIZATION_IMPLEMENTATION_GUIDE.md  UI_OVERHAUL_GUIDE.md
docs/work-items/: WORK_ITEM_24_Sources_Panel_Enhancement.md  WORK_ITEM_28_Window_Resizability.md  WORK_ITEM_31_Viewport_Toolbar.md  WORK_ITEM_32_DockSpace_Layout.md  WORK_ITEM_33_Layout_Presets.md  WORK_ITEM_36_Theme_Customization.md  WORK_ITEM_37_Multi_Viewport_Split.md
ffmpeg/doc/: filters.texi
include/: analysis.h  app_bootstrap.h  boundary.h  cli_runner.h  config.h  config_loader.h  expr.h  fdtd_core.h  materials.h  ports.h  sources.h  types.h  ui_controls.h  ui_layout.h  ui_render.h  util.h
prompts/: PROMPT_24_Sources_Panel_Enhancement.md  PROMPT_25_Material_Blocks_Integration.md  PROMPT_28_Window_Resizability.md  PROMPT_29_Mouse_Wheel_Zoom.md  PROMPT_30_Pan_Navigation.md  PROMPT_31_Viewport_Toolbar.md  PROMPT_32_DockSpace_Layout.md  PROMPT_33_Layout_Presets.md  PROMPT_34_Grid_Enhancements.md  PROMPT_35_Measurement_Tools.md  PROMPT_36_Theme_Customization.md  PROMPT_37_Multi_Viewport_Split.md  PROMPT_38_Animation_Recording.md  PROMPT_39_Advanced_Measurement_Tools.md
recordings/: sample_layout.json
scripts/: auto_validate.ps1  build.ps1  build_msvc.bat  build_msys2.sh  install_deps_vcpkg.bat  make_icons.py  setup.ps1  smoke-composer-headless.ps1
src/: analysis.c  app_bootstrap.c  boundary.c  cli_runner.c  config_loader.c  emwave_debug  fdtd_core.c  main.c  main_cli.c  main_new.c  mainv04.c  mainv06.c  materials.c  render_layout_test.c  sources.c  ui_controls.c  ui_layout.c  ui_render.c
src/app/: cli_runner.c  main_cli.c  main_imgui.cpp  main_new.c
src/core/: analysis.c  app_bootstrap.c  boundary.c  config_loader.c  config_runtime.c  expr.c  fdtd_core.c  material_library.c  material_library.h  ports.c  sources.c
src/legacy/: main.before_buttons.c  main.down_buttons.c  main_monolithic.c  mainbrock.c  mainfixesclaude.c  mainv0.c  mainv01.c  mainv02.c  mainv03.c  mainv04.c  mainv05.c  mainv06.c  mainv07.c  mainv08.c  mainv09.c
src/ui/: render_layout_test.c  ui_controls.c  ui_layout.c  ui_render.c
tests/unit/: CMakeLists.txt  test_analysis_alloc.c  test_config_loader.c  test_config_runtime.c  test_fdtd_core.c  test_material_library.c
work-items/: WORK_ITEM_25_Material_Blocks_Integration.md  WORK_ITEM_29_Mouse_Wheel_Zoom.md  WORK_ITEM_30_Pan_Navigation.md  WORK_ITEM_34_Grid_Enhancements.md  WORK_ITEM_35_Measurement_Tools.md  WORK_ITEM_38_Animation_Recording.md  WORK_ITEM_39_Advanced_Measurement_Tools.md
(+77 files in other folders)
